changed to lit element

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a href="/pages/gallery.html">
         <h3>gallery</h3>
       </a>
-      <a href="/pages/polymer.html">
-        <h3>polymer</h3>
+      <a href="/pages/lit-element.html">
+        <h3>lit-element</h3>
       </a>
     </nav>
   </header>
