--- a/pages/lit-element.html
+++ b/pages/lit-element.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/styles/polymer.css">
-  <script defer type="text/javascript" src="/js/mypolymer.js" ></script>
-  <title>Polymer Example</title>
+  <link rel="stylesheet" href="/styles/lit-element.css">
+  <script defer type="text/javascript" src="/js/mylit-element.js" ></script>
+  <title>lit-element Example</title>
 </head>
 
 <body>
@@ -19,7 +19,6 @@
     </nav>
   </header>
 </body>
-
 
 
 </html>
